// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/steps/demo/customized-progress-dot.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/error.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-next-error"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: check"
          class="anticon anticon-check ant-steps-finish-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#check"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-error"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: close"
          class="anticon anticon-close ant-steps-error-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#close"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Process
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/icon.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: user"
          class="anticon anticon-user"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#user"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Login
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: solution"
          class="anticon anticon-solution"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#solution"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Verification
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: loading"
          class="anticon anticon-loading"
        >
          <svg
            aria-hidden="true"
            class="anticon-spin"
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#loading"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Pay
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: smile-o"
          class="anticon anticon-smile-o"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#smile-o"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Done
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/progress-dot.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/simple.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: check"
          class="anticon anticon-check ant-steps-finish-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#check"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/small-size.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: check"
          class="anticon anticon-check ant-steps-finish-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#check"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/step-next.md correctly 1`] = `
<div>
  <div
    class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
  >
    <div
      class="ant-steps-item ant-steps-item-process"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          1
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          First
        </div>
      </div>
    </div>
    <div
      class="ant-steps-item ant-steps-item-wait"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          2
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          Second
        </div>
      </div>
    </div>
    <div
      class="ant-steps-item ant-steps-item-wait"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          3
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          Last
        </div>
      </div>
    </div>
  </div>
  <div
    class="steps-content"
  >
    First-content
  </div>
  <div
    class="steps-action"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: check"
          class="anticon anticon-check ant-steps-finish-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#check"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical-small.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical ant-steps-small"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          aria-label="icon: check"
          class="anticon anticon-check ant-steps-finish-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#check"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;
